# openu-assembler

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
examples/example1/: example1.am  logs.txt
examples/example10/: logs.txt
examples/example2/: example2.am  example2.as  logs.txt
examples/example3/: example3.am  logs.txt
examples/example4/: example4.as  logs.txt
examples/example5/: example5.am  logs.txt
examples/example6/: example6.am  example6.as  logs.txt
examples/example7/: logs.txt
examples/example8/: example8.as  logs.txt
examples/example9/: example9.am  logs.txt
src/: Assembler.c  Assembler.h  Consts.c  Consts.h  Errors.c  Errors.h  FirstRun.c  FirstRun.h  Includes.h  PreAssembler.c  PreAssembler.h  SecondRun.c  SecondRun.h  Types.h  Utils.c  Utils.h  main.c
